--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -89,7 +89,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/today"
-                android:textSize="12pt" />
+                android:textSize="10pt" />
 
             <View
                 android:layout_width="match_parent"
@@ -109,7 +109,8 @@
         android:id="@+id/card_tomorrow_weather"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         app:cardCornerRadius="4dp"
         app:contentPadding="10dp"
         tools:layout_editor_absoluteX="242dp"
@@ -124,7 +125,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Tomorrow"
-                android:textSize="12pt" />
+                android:textSize="10pt" />
 
             <View
                 android:layout_width="match_parent"
